# mpu9250_with_mqtt

./: .gitignore  CMakeLists.txt  README.md  save_mqtt_data.py  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  driver_mpu9250_basic.c  driver_mpu9250_basic.h  main.cpp  zmlib.c  zmlib.h
main/interface/: SPIbus.cpp  driver_mpu9250_interface.cpp  driver_mpu9250_interface.h  zm_wifi.c  zm_wifi.h
main/src/: driver_mpu9250.c  driver_mpu9250.h  task_9250.h
